--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
 }
 
 
+* * * * {
+    outline: 2px solid coral;
+}
+
 *,
 *::after,
 *::before {
@@ -50,8 +54,8 @@ body {
 
 .product {
     width: calc(650px/2);
-    height:  auto;
-    padding: 20px 30px ;
+    height: auto;
+    padding: 20px 30px;
 
     P:nth-of-type(1) {
         color: var(--Dark-grayish-blue);
@@ -70,7 +74,7 @@ body {
 
     }
 
-   & P:nth-of-type(2) {
+    & P:nth-of-type(2) {
         color: var(--Dark-grayish-blue);
         font-size: 16px;
         /* margin-right: 30px; */
@@ -84,6 +88,7 @@ body {
     align-items: center;
     display: flex;
     gap: 20px;
+
 
     & span:nth-of-type(1) {
         font-size: 35px;
@@ -110,6 +115,13 @@ body {
     margin-right: 30px;
     border-radius: 10px;
 
+    &:has(button):hover {
+        background-color: var(--Verydark-blue);
+        cursor: pointer;
+    }
+
+   
+
 
     button {
         color: var(--White);
@@ -133,17 +145,18 @@ body {
 }
 
 
-    .mobile-only {
-        display: none !important;
-    }
+.mobile-only {
+    display: none !important;
+}
 
 @media screen and (max-width: 768px) {
 
-    body{
-overflow-y: auto;
-    /* height: auto; */
+    body {
+        overflow-y: auto;
+        /* height: auto; */
 
     }
+
     .wrapper {
         flex-direction: column;
         width: calc(100% - 40px);
@@ -177,12 +190,12 @@ overflow-y: auto;
         position: relative;
         padding: 20px 20px;
 
-        h1{
-          font-size: 30px;  
-          
+        h1 {
+            font-size: 30px;
+
         }
 
-        & p:nth-of-type(2){
+        & p:nth-of-type(2) {
             font-size: 1.2em;
         }
     }
