--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
 .product-images .desktop-only {
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 10px 0 0 10px;
 }
 
 
