--- a/style.css
+++ b/style.css
@@ -149,14 +149,14 @@ body {
 
     body {
         overflow-y: auto;
-        /* height: auto; */
+        padding:20px;
 
     }
 
     .wrapper {
         flex-direction: column;
         width: calc(100% - 40px);
-        height: calc(100% - 40px);
+        height:100%;
         box-sizing: border-box;
 
     }
