--- a/style.css
+++ b/style.css
@@ -9,190 +9,127 @@
     --White: hsl(0, 0%, 100%);
 }
 
-
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
-}
-
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "Montserrat", sans-serif;
 }
 
 body {
     background-color: var(--Cream);
-    width: 100%;
     height: 100vh;
+    width: 100%;
+    font-family: "Montserrat", sans-serif;
+
+    display: flex;
+    justify-content: center;
     align-items: center;
-    display: flex;
-
 }
 
-.wrapper {
-    width: 650px;
-    height: 67vh;
-    background-color: var(--White);
-    margin: 0 auto;
-    display: flex;
+.container {
+    width: 600px;
+    height: 430px;
     border-radius: 10px;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    background-color: var(--White);
+
+    display: flex;
+    justify-content: center;
+
 }
 
-.product-images {
-    width: calc(650px/2);
-    height: 100%;
+.container img {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
 .product {
-    width: calc(650px/2);
-    height: auto;
-    padding: 20px 30px;
-
-    P:nth-of-type(1) {
-        color: var(--Dark-grayish-blue);
-        font-size: 18px;
-        font-weight: 500;
-        letter-spacing: 3px;
-        font-family: "Montserrat", sans-serif;
-    }
-
-    h1 {
-        color: var(--Verydark-blue);
-        font-size: 37px;
-        font-weight: 700;
-        line-height: 1;
-        margin: 15px 0;
-
-    }
-
-    & P:nth-of-type(2) {
-        color: var(--Dark-grayish-blue);
-        font-size: 16px;
-        /* margin-right: 30px; */
-        font-weight: 500;
-    }
+    padding: 20px 0;
+    width: 700px;
+    margin-left: 30px;
 }
 
-.product .product-price {
-    margin: 20px 0;
-    padding-right: 40px;
-    align-items: center;
+.name {
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 3px;
+    color: var(--Dark-grayish-blue);
+}
+
+.product-detail {
+    font-size: 35px;
+    /* border: 2px solid coral; */
+    width: 260px;
+    margin: 20px 0 20px 0;
+}
+
+.product p:nth-of-type(2) {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--Dark-grayish-blue);
+    width: 230px;
+    /* border: 2px solid; */
+    margin-bottom: 20px;
+}
+
+.product-price {
+    width: 80%;
     display: flex;
-    gap: 20px;
-
-
-    & span:nth-of-type(1) {
-        font-size: 35px;
-        font-weight: 700;
-        color: var(--Dark-cyan);
-        font-family: "Fraunces", sans-serif;
-
-    }
-
-    & span:nth-of-type(2) {
-        font-size: 14px;
-        text-decoration: line-through;
-        color: var(--Dark-grayish-blue);
-    }
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-/* for the button  */
+.product-price span {
+    margin-right: 20px;
+}
+
+.product-price span:first-of-type {
+    font-size: 35px;
+    color: var(--Verydark-blue);
+    font-weight: 700;
+}
+
+.product-price span:last-of-type {
+    color: var(--Dark-grayish-blue);
+    text-decoration: line-through;
+    font-size: 15px;
+}
 
 .product-btn {
-    border: 2px solid;
-    text-align: center;
+    display: block;
     background-color: var(--Dark-cyan);
-    border: none;
-    margin-right: 30px;
+    width: 80%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+    color: var(--White);
+    font-size: 18px;
+    font-weight: 700;
     border-radius: 10px;
-
-    &:has(button):hover {
-        background-color: var(--Verydark-blue);
-        cursor: pointer;
-    }
-
-   
-
-
-    button {
-        color: var(--White);
-        border: none;
-        background-color: transparent;
-        font-size: 15px;
-        font-weight: 700;
-        padding: 10px;
-
-        &::before {
-            content: url(./images/icon-cart.svg);
-            margin-right: 8px;
-        }
-    }
 }
 
-.product-images .desktop-only {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px 0 0 10px;
+.product-btn:hover,
+.product-btn:active {
+    background-color: var(--Verydark-blue);
+}
+
+button img {
+    margin-right: 10px;
 }
 
 
-.mobile-only {
-    display: none !important;
-}
 
-@media screen and (max-width: 768px) {
-
-    body {
-        overflow-y: auto;
-        padding:20px;
-
-    }
-
-    .wrapper {
+@media screen and (max-width:600px) {
+    .container {
         flex-direction: column;
-        width: calc(100% - 40px);
-        height:100%;
-        box-sizing: border-box;
-
-    }
-
-    .product-images {
+        margin: 0;
         width: 100%;
-        height: 300px;
-        background-position: center;
-        background-size: cover;
-        border-top-right-radius: 10px;
+        border: 2px solid;
+        height: auto;
     }
 
-    .product-images .mobile-only {
-        width: 100%;
-        height: 100%;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        display: block !important;
-    }
-
-    .product-images .desktop-only {
-        display: none !important;
-    }
-
-    .product {
-        width: 100%;
-        position: relative;
-        padding: 20px 20px;
-
-        h1 {
-            font-size: 30px;
-
-        }
-
-        & p:nth-of-type(2) {
-            font-size: 1.2em;
-        }
+    .product-btn {
+        width: inherit;
     }
 }
