--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 .product {
     padding: 20px 0;
     width: 700px;
-    margin-left: 30px;
+    padding-left: 30px;
 }
 
 .name {
@@ -137,22 +137,25 @@ button img {
 
 
 @media screen and (max-width:600px) {
-    body{
+    body {
         min-height: 100svh;
     }
+
     .container {
         flex-direction: column;
 
-        min-width: 90svw;;
+        min-width: 90svw;
         margin: 20px;
-        height: auto;
+
+        height:auto;
+       
 
     }
 
     .container img {
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
-    border-bottom-left-radius: 0;
+        border-bottom-left-radius: 0;
 
     }
 
@@ -170,8 +173,9 @@ button img {
         margin: 0;
         padding: 30px;
     }
-    .product p:nth-of-type(2){
-      font-size: 18px;
+
+    .product p:nth-of-type(2) {
+        font-size: 18px;
         font-weight: 400;
     }
 
@@ -179,3 +183,60 @@ button img {
         width: 100%;
     }
 }
+
+/* for a landscape screens */
+
+@media only screen and (orientation: landscape) {
+   .container{
+    width: 90svw;
+    flex-direction: column;
+    margin: 20px 0;
+    
+    height: auto;
+   }
+
+   .container img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0;
+
+}
+
+   .desktop-img{
+    display: none;
+   }
+   .mobile-img{
+    display: block;
+   }
+
+   .product{
+    width: 100%;
+   }
+
+   .name{
+    font-size: 30px;
+   }
+
+   .product-detail{
+    margin-right: 40px;
+    font-size: 40px;
+
+   }
+   .product p:nth-of-type(2){
+    font-size: 20px;
+   }
+
+   .product-price span:nth-of-type(1){
+    font-size: 45px;
+   }
+   .product-price span:nth-of-type(2){
+    font-size: 25px;
+   }
+
+   .product-btn{
+    width: 92%;
+    font-size: 25px;
+
+   }
+  }
+  
