updated @ media for a landscape screen and for desktop view

--- a/style.css
+++ b/style.css
@@ -169,7 +169,6 @@ button img {
 
     .product {
         width: 100%;
-        /* outline: 2px solid rgb(65, 42, 165); */
         margin: 0;
         padding: 30px;
     }
@@ -186,7 +185,7 @@ button img {
 
 /* for a landscape screens */
 
-@media only screen and (orientation: landscape) {
+@media only screen and (max-width:800px) and (orientation: landscape) {
    .container{
     width: 90svw;
     flex-direction: column;
@@ -231,6 +230,8 @@ button img {
    }
    .product-price span:nth-of-type(2){
     font-size: 25px;
+    margin-left: 30px;
+    font-size: 20px;
    }
 
    .product-btn{
